Benchmark classes now also measure latency